- texture categories for subfolders/subwads inside pk3 resource archives
- texture categories remember which one you clicked on properly
- when drag-selecting, hold alt when you release-click to drag-deselect instead
- bmsq added long texture name support. thanks bmsq!
- moved "Grid Increase" / "Grid Decrease" to be beside each other in the hotkey setup
- fixed a minor bug with displaying texture counts in the browser
- merged texture and flat browser source code to reduce code duplication (this shouldn't have any effects that are noticeable to you, but please, keep an eye for new bugs with the texture browser)
- internal changes to how selection is "converted" when switching modes, this should not cause visible behavioral differences, this is just to allow for the new Lua mode to work properly. please report any weird new behavior regarding selection.
- minor tweaks to status bar flavor text
- made it so that the initial directory for the file dialog is separate based on whether it's wads, resources, or prefabs
- fixed a crash when double click editing sectors in make sectors mode
- fixed negative lighting values not always working right

version 2.1.3.10
=====================
- fixed newly drawn geometry merging incorrectly in rare circumstances
- fixed inconsistent behavior when drawing new geometry counterclockwise to more resemble the DB2 behavior
- fixed some weirdnesses with the Map Options screen if you had the first game config selected (Boom by default)
- when you alt-tab back into the script editor, the keyboard focus goes to the text box as expected
- when you Save As, the filename is filled in already with the current one
- renamed UDMF/Hexen activation stuff relating to projectiles because it's more correct and less confusing
- fixed crash when creating a new level with no resources selected and randomized textures
- fixed a crash when going in 3d mode with no resources loaded
- fixed a potential threading error with unknown images