@@ -8,6 +8,7 @@ version 2.1.3.12
 - texture categories for subfolders/subwads inside pk3 resource archives
 - texture categories remember which one you clicked on properly
 - when drag-selecting, hold alt when you release-click to drag-deselect instead
+- if you hold alt when you start to drag things, it duplicates them instead.
 - bmsq added long texture name support. thanks bmsq!
 - moved "Grid Increase" / "Grid Decrease" to be beside each other in the hotkey setup
 - fixed a minor bug with displaying texture counts in the browser
@@ -17,6 +18,7 @@ version 2.1.3.12
 - made it so that the initial directory for the file dialog is separate based on whether it's wads, resources, or prefabs
 - fixed a crash when double click editing sectors in make sectors mode
 - fixed negative lighting values not always working right
+- if you press alt or ctrl while drag selecting it doesnt stop selecting
 
 version 2.1.3.10
 =====================
